# ACCL

./: .gitignore
kernels/: clean.py
kernels/cclo/: Makefile
kernels/plugins/: Makefile
kernels/plugins/mvm/: Makefile  mvm_kernel.cpp  mvm_kernel.h
kernels/plugins/pl_reduction/: Makefile  build_pl_reduction.tcl  pl_reduction.h
test/host/Coyote/: .gitignore
test/host/mvm/: .gitignore
test/host/mvm/scripts/: flow_u55c.sh  host_alveo.txt  program_alveo.tcl  run_accl.sh  run_openmpi.sh
test/host/mvm/source/: clean.py  plot.py  testbench.py
test/host/mvm/source/accl/: CMakeLists.txt  test_accl.cpp
test/host/mvm/source/openmpi/: CMakeLists.txt  test_openmpi.cpp
test/host/mvm/source/single/: CMakeLists.txt  test_single.cpp
test/host/pl_reduction/: CMakeLists.txt  test.cpp
test/model/simulator/: xsi_dut.cpp
test/refdesigns/: clean.py
